feat: move account deletion completion to java
